# osxmon

./: .gitignore  README.md  docker-compose.yml  init.sh  osxmon.config.yml  tasks.py
backend/: CMakeLists.txt
backend/doc/: design.md
backend/src/: App.cpp  AppComponent.hpp
backend/src/controller/: MonitorController.hpp
backend/src/dto/: MonitorDto.hpp
backend/src/service/: MonitorService.hpp  SMCService.hpp
frontend/: Dockerfile  next.config.ts  package-lock.json
frontend/doc/: design.md
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/components/: ConfigPanel.module.css  ConfigPanel.tsx  Gauge.module.css  Gauge.tsx  HistoryChart.tsx  ProcessTable.module.css  ProcessTable.tsx
